# StockTracker

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  股市分析面板_規劃文件.md
docs/superpowers/plans/: 2026-06-07-stock-dashboard-mvp.md  2026-06-08-background-scheduler-completion.md  2026-06-08-news-summary-completion.md
scripts/: brief-launchd.mjs  brief-runner.mjs
server/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/: App.test.tsx  App.tsx  styles.css  types.ts
src/components/: DailyBrief.test.tsx  DailyBrief.tsx  HeaderBar.tsx  ImpactMap.test.tsx  ImpactMap.tsx  MarketStrip.tsx  NewsFeed.tsx  SchedulePanel.test.tsx  SchedulePanel.tsx  Sparkline.tsx  WatchlistPanel.tsx
src/data/: mockPayload.ts  relationships.ts  watchlists.ts
src/lib/: aiSentiment.ts  api.test.ts  api.ts  briefComposer.test.ts  briefComposer.ts  briefDelivery.test.ts  briefDelivery.ts  briefRunner.test.ts  briefRunner.ts  briefRunnerJob.test.ts  briefRunnerJob.ts  briefSchedule.ts  dashboardLoader.test.ts  dashboardLoader.ts  dateTime.ts  launchd.test.ts  launchd.ts  marketHours.test.ts  marketHours.ts  marketTransformer.test.ts  marketTransformer.ts
